# Energy-Consumption

./: .gitignore copy  LICENSE  LICENSE copy  README copy.md  README.md  app.py  preprocessing.pkl  preprocessing_target.pkl  pyproject.toml  requirements.txt  setup.py
.github/workflows/: aws.yaml
config/: schema.yaml
notebook/: check.ipynb  data_transfer.ipynb  electric-power-consumption-forecasting.ipynb
src/components/: data_ingestion.py  data_transformation.py  model_evaluation.py  model_trainer.py
src/constants/: __init__.py
src/data_access/: proj1_data.py
src/entity/: artifact_entity.py  config_entity.py  estimator.py
src/pipline/: prediction_pipeline.py  training_pipeline.py
static/: style.css
templates/: energydata.html
